make SLD zoomable
